2011-02-25  Stefano Lattarini  <stefano.lattarini@gmail.com>

	tests: add testcases sanity-checking the testsuite
	Helper subroutines, variables and other pieces of code defined
	in the `tests/defs' and used by many testcases are non-obvious,
	and tricky to get to work portably; but until now, they weren't
	tested at all in a clear and self-contained way.
	This change should remedy to the situation.
	* tests/self-check-cleanup.test: New test, check removal of
	temporary test working directory by `./defs'.
	* tests/self-check-dir.test: New test, check that tests using
	`./defs' create a proper temporary directory, and run in it.
	* tests/self-check-exit.test: New test, check that, in case of
	failing commands, the correct exit status is passed to the exit
	trap installed by the `./defs' script.
	* tests/self-check-is_newest.test: New test, checking the
	`is_newest' subroutine.
	* tests/self-check-me.test: New test, checking that $me gets
	defined automatically by `tests/defs' if not set, and that it
	can be overridden from either the shell or the environment.
	* tests/self-check-sanity.test: New test, check that the sanity
	checks performed by the `tests/defs' script works correctly.
	* tests/self-check-unindent.test: New test, checking the
	`unindent' subroutine.
	* tests/Makefile.am (TESTS): Update.

2011-02-20  Stefano Lattarini  <stefano.lattarini@gmail.com>

	tests: tempdirs with restrictive permissions are cleaned correctly
	Before this change, the removal of a temporary test directory
	containing subdirectories with restrictive permissions (such as
	'r--r--r--') could fail.
	* tests/defs: Ensure that all the subdirectories of a temporary
	test directory have the 'read', 'write' and 'execute' bits set,
	before trying to remove it with `rm -rf'.
	* tests/Makefile.am (clean-local-check): Likewise.

2011-02-16  Stefano Lattarini  <stefano.lattarini@gmail.com>
	    Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	test defs: add subroutine for input unindenting