@@ -87,8 +87,8 @@ if $have_symlinks; then
   cd ..
   $SHELL -c '. ./defs' dummy.test
   ls -l # For debugging.
-  ls -l file | grep "^---------- .*file"
-  ls -ld dir | grep "^d--------- .*dir"
+  ls -l file | grep "^----------.*file"
+  ls -ld dir | grep "^d---------.*dir"
 
   $SHELL -c '
     ocwd=`pwd` || exit 1
@@ -96,8 +96,8 @@ if $have_symlinks; then
     ln -s "$ocwd/dir" "$ocwd/file" .
   ' dummy.test
   ls -l # For debugging.
-  ls -l file | grep "^---------- .*file"
-  ls -ld dir | grep "^d--------- .*dir"
+  ls -l file | grep "^----------.*file"
+  ls -ld dir | grep "^d---------.*dir"
 
   rmdir dir
   rm -f file
