@@ -18,6 +18,8 @@
 # Check that tests using `./defs' create a proper temporary directory,
 # and run in it.
 
+. ./defs-static || exit 1
+
 set -ex
 
 this=S_dir
