@@ -17,13 +17,14 @@
 # Sanity check for the automake testsuite.
 # Make sure that $me gets automatically defined by `./defs'.
 
-set -ex
+. ./defs-static || exit 1
 
-: ${SHELL=/bin/sh}
+set -ex
 
 $SHELL -c '. ./defs && echo me=$me' foo-bar-.test | grep '^me=foo-bar-$'
 $SHELL -c '. ./defs && echo me=$me' _foo__bar.test | grep '^me=_foo__bar$'
 $SHELL -c '. ./defs && echo me=$me' 012.test | grep '^me=012$'
 $SHELL -c '. ./defs && echo me=$me' foo.bar | grep '^me=foo\.bar$'
+$SHELL -c '. ./defs && echo me=$me' a.b.c.test | grep '^me=a\.b\.c$'
 
 :
