@@ -1,3 +1,14 @@
+2011-04-16  Stefano Lattarini  <stefano.lattarini@gmail.com>
+
+	tests: fix few bugs in self checks
+	Related to automake bug#8508.
+	* tests/self-check-cleanup.test: Be laxer when grepping output
+	from `ls -l', to account for ACLs and SELinux-only files.
+	* tests/self-check-dir.test: Source `defs-static' to read in the
+	correct definition for $SHELL.
+	* tests/self-check-me.test: Likewise, and extend a bit.
+	Report from Jim Meyering.
+
 2011-02-25  Stefano Lattarini  <stefano.lattarini@gmail.com>
 
 	tests: add testcases sanity-checking the testsuite
